k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    name: example-app
