k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: example-app
  labels:
    app: example-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: app
        image: 890675146779.dkr.ecr.us-east-1.amazonaws.com/example-app-dev:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
