k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: example-app
  labels:
    app: example-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: example-app
